Updated for Java 11.0.1